assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto|Poppins:100,200,300,400,500,600');


/* ----------------------------------------------------------------------------------------
                              01. General css
 -------------------------------------------------------------------------------------- */

body {
    font-family: 'Roboto', sans-serif;
}


/* ----------------------------------------------------------------------------------------
                              02. Navigation area css
 --------------------------------------------------------------------------------------- */

.navbar-brand img {
    height: 50px;
    width: auto;
    -webkit-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
    padding-left: 20px;
}

.navbar-items li {
   margin: 10px 10px;
   
}

.navbar-items {
   margin-right: 20px;
}

.btn-navb {
   background-image: linear-gradient(to right, #6A82FB, #FC5C7D); 
   border: none;
   color: white;
   padding: 10px 20px 10px 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   transition-duration: 0.4s;
}


.btn-navb:hover {
  color: white;
  background-image: linear-gradient(to right, #FC5C7D, #6A82FB);
  
}

.navbar {
    background-color: #e8f4fd;
    font-family: 'Roboto', sans-serif;
}


/* ----------------------------------------------------------------------------------------
                               03. header area css
 -------------------------------------------------------------------------------------- */
/* gradient color below from: https://uigradients.com/#SublimeLight */
#header {
    background: #FC5C7D;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #6A82FB, #FC5C7D);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #6A82FB, #FC5C7D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   
    padding-bottom: 30px;
    font-family: 'Roboto', sans-serif;
}

.header-first h1, .header-first p {
  color: #fff;
}

.header-second {
  display: flex;
    flex-flow: row wrap;
    justify-content: center;
}

.header-second img {
  max-height: 500px;
}

.header-p-1 {
    padding: 10px 0 15px 0; 
}

.header-first p {
    font-weight: 300;
    font-size: 19px;
}

.btn-header {
   background-color: #fff; 
   border: none;
   color: #6A82FB;
   padding: 10px 20px 10px 20px;
   text-align: center;
   text-decoration: none;
   margin-top: 10px;
   margin-bottom: 20px;
   font-size: 19px;
}

.btn-header:hover {
   color: white;
   background-image: linear-gradient(to right, #6A82FB, #FC5C7D);
   border: 1px solid #fff;
}


/* ----------------------------------------------------------------------------------------
                                04. Feature area css
 --------------------------------------------------------------------------------------- */

.feature-area {
    margin: 90px 60px 60px 60px;
    font-family: 'Roboto', sans-serif;
    color: #6c757d;
}

.p-intro {
    padding: 20px 60px 10px 60px;
}

.first-item-features {
    margin-left: -30px;
   
}

.fas {
    color: #FC5C7D;
}

.fas:hover {
   color: #6A82FB;
}


/* ----------------------------------------------------------------------------------------
                                05. Screens area css
 --------------------------------------------------------------------------------------- */


.featured-screens-section {
    background-color: #e8f4fd;
    margin: 0;
    padding: 110px 90px 110px 90px;
    font-family: 'Roboto', sans-serif;
    color: #6c757d;
}

.screens-intro {
    padding-bottom: 30px;
}

.featured-screen-cont {
    display: flex;
    justify-content:space-between;
}


.featured-screen-cont img {
    max-height: 400px;
}

.featured-screen-cont img:hover {
  box-shadow: 0 0 29px rgba(33,33,33,.4); 
  max-height: 410px;
}

/* ----------------------------------------------------------------------------------------
                                 06. Price area css
 --------------------------------------------------------------------------------------- */

.pricing-section {
    background-color: #fff;
    margin: 0;
    padding: 110px 60px 110px 60px;
    font-family: 'Roboto', sans-serif;
    color: #6c757d;
}

.card-header {
    background-color: #e8f4fd;
}

.price-item {
    border-color: #e8f4fd;
    transition: box-shadow .3s;
    
}


.btn-price {
   background-image: linear-gradient(to right, #6A82FB, #FC5C7D); 
   border: none;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
}

.btn-price:hover {
   color: white;
   background-image: linear-gradient(to right, #FC5C7D, #6A82FB);
}


/* ----------------------------------------------------------------------------------------
                                07. Action area css
 --------------------------------------------------------------------------------------- */



/* ----------------------------------------------------------------------------------------
                                08. Testimonial area css
* --------------------------------------------------------------------------------------- */



/* ----------------------------------------------------------------------------------------
                                 09. Contact area css
 --------------------------------------------------------------------------------------- */

.contact-section {
    background: #FC5C7D;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #6A82FB, #FC5C7D);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #6A82FB, #FC5C7D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    padding: 110px 60px 110px 60px;
    font-family: 'Roboto', sans-serif;
}

.contact-head h3 {
    color: #fff;
}

.contact-head h5 {
    color: #fff;
    padding-top: 15px;
    padding-bottom: 20px;
}



[type="text"] {
    margin-bottom: 8px;
}

.btn-submit {
   background-color: #fff; 
   border: none;
   color: #6A82FB;
   padding: 10px 20px 10px 20px;
   text-align: center;
   text-decoration: none;
   font-size: 16px;
   margin-top: 10px;
   margin-bottom: 20px;
}

.btn-submit:hover {
   color: white;
   background-image: linear-gradient(to right, #6A82FB, #FC5C7D);
   border: 1px solid #fff;
}



/* ----------------------------------------------------------------------------------------
                                 10. Footer area css
 --------------------------------------------------------------------------------------- */


footer {
    background-color: #151b25;
    color: #e8f4fd;
     padding: 110px 60px 110px 60px;
    font-family: 'Roboto', sans-serif;
}

.footer-2 h5, .footer-1 h5 {
    font-size: 17px;
}

.footer-2 p, .footer-1 p {
    font-size: 15px;
}

.footer-1 img {
    padding-top: 1em;
    width: 20%;
}

.btn-footer {
   background-image: linear-gradient(to right, #6A82FB, #FC5C7D); 
   border: none;
   color: white;

   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 15px;
   margin-top: 10px;
   
}

.btn-footer:hover {
   color: white;
   background-image: linear-gradient(to right, #FC5C7D, #6A82FB);
}

.subs-input {
    background-color: #374761;
    color: #fff;
}


/* ----------------------------------------------------------------------------------------
                                 Media Queries
 --------------------------------------------------------------------------------------- */


/* _________________ Small devices __________________*/

@media screen and (max-width: 768px) {

/* Header - Small Devices */

.header {
    padding-left: 0;
}

.row-header {
    padding-top: 60px;
}
        
.header-first {
    text-align: center;
}

.features-list {
    text-align: center;
}



/* Features - Small Devices */


.feature-area {
    margin: 60px 3px 60px 3px;
}
    
.p-intro {
padding: 0;
} 


    
/* Screenshots - Small Devices */

.featured-screens-section {
    margin: 0;
    padding: 0;
    padding-bottom: 70px;
}

.screens-intro {
    padding: 90px 5px 50px 5px;
}

.featured-screen-cont img {
    margin: auto; 
    padding-top: 10px;
}


/* Pricing - Small Devices */

.pricing-section {
    margin: 0;
    padding: 90px 3px 90px 3px;
}

.btn-price {
   padding: 7px 7px;
   font-size: 19px;
}

.fas {
    display: none; 
}

}

